small issues fixed like buttons alignment, fonts in carousel section

--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ header nav ul li:nth-last-child(1) a{
     box-shadow: 0px 0px 50px #0700001A;
 }
 
-.monitor .modal-content iframe{
+.monitor .modal-content video{
     margin: 0 auto;
     display: block;
 }
@@ -367,7 +367,7 @@ header nav ul li:nth-last-child(1) a{
 }
 
 .monitor .close{
-    position:absolute;
+    position: absolute;
     right: 2%;
     top: 2%;
     font-size: 2rem;
@@ -519,7 +519,7 @@ header nav ul li:nth-last-child(1) a{
     color: #BFBFBF;
 }
 
-.instructor-details div:nth-child(2) p{
+.instructor-details div + p{
     font-size: 18px;
     color: #FFBE58;
 }
@@ -539,14 +539,18 @@ header nav ul li:nth-last-child(1) a{
 }
 
 .slick-prev{
-    right: 15%;
+    right: 7%;
     background: url('../images/carouselarrow.svg');
     transform: matrix(-1, 0, 0, -1, 0, 0);
 }
 
 .slick-next{
-    right: 8%;
+    right: 0;
     background: url('../images/carouselarrow.svg');
+}
+
+.slick-disabled{
+    opacity: 0.2;
 }
 
 .slick-arrow{
@@ -559,6 +563,10 @@ header nav ul li:nth-last-child(1) a{
     background-position: center !important;
     font-size: 0px !important;
     border: none;
+}
+
+button:focus{
+    outline: none;
 }
 
 /* ------------------------------------------ services section ------------------------------------------ */
@@ -620,61 +628,4 @@ footer .container span{
 
 footer .container a i{
     color: #166BFF;
-}
-
-
-
-.multi-item-carousel{
-  .carousel-inner{
-    > .item{
-      transition: .6s ease-in-out all;
-    }
-    .active{
-      &.left{
-        left:-33%;
-      }
-      &.right{
-        left:33%;
-      }
-    }
-    .next{
-      left: 33%;
-    }
-    .prev{
-      left: -33%;
-    }
-  }
-  .carouse-control{
-    &.left, &.right{
-      background-image: none;
-    }
-  }
-
-
-
-
-
-
-  .carousel-control 			 { width:  4%; }
-.carousel-control.left,.carousel-control.right {margin-left:15px;background-image:none;}
-@media (max-width: 767px) {
-	.carousel-inner .active.left { left: -100%; }
-	.carousel-inner .next        { left:  100%; }
-	.carousel-inner .prev		 { left: -100%; }
-	.active > div { display:none; }
-	.active > div:first-child { display:block; }
-
-}
-@media (min-width: 767px) and (max-width: 992px ) {
-	.carousel-inner .active.left { left: -50%; }
-	.carousel-inner .next        { left:  50%; }
-	.carousel-inner .prev		 { left: -50%; }
-	.active > div { display:none; }
-	.active > div:first-child { display:block; }
-	.active > div:first-child + div { display:block; }
-}
-@media (min-width: 992px ) {
-	.carousel-inner .active.left { left: -25%; }
-	.carousel-inner .next        { left:  25%; }
-	.carousel-inner .prev		 { left: -25%; }	
 }
